--- a/index.html
+++ b/index.html
@@ -6995,7 +6995,7 @@ background: var(--primary-dark);
             </div>
         </div>
     </div>
-    <div class="stat-label" style="color:var(--text-color)">Seminars/Fieldtrips</div>
+    <div class="stat-label" style="color:var(--text-color)">Seminars/Field trips</div>
 </div>
     
 <div class="stat-card" id="ojt-summary-card" onclick="openStatCardModal('ojt')" style="cursor: pointer;">
@@ -7065,7 +7065,7 @@ Bgy. San Roque, Antipolo City, Rizal
 <span style="color:var(--danger);font-weight:400;font-size:16px;font-size:15px;">2<hr></span>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">FAILED</small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Failed</small>
 <span style="color:var(--danger);font-weight:400;font-size:15px;"></span>
 </div>
 </div>
@@ -11908,7 +11908,7 @@ function openStatCardModal(cardType) {
             content: document.getElementById('uniforms-summary').innerHTML
         },
         'seminars': {
-            title: '<i class="fas fa-chalkboard-teacher"></i> Seminars/Fieldtrips',
+            title: '<i class="fas fa-chalkboard-teacher"></i> Seminars/Field trips',
             content: document.getElementById('seminars-summary').innerHTML
         },
         'attendance': {
