--- a/index.html
+++ b/index.html
@@ -8604,7 +8604,7 @@ Confirm Selection
 <h1 class="page-title">Class Schedule</h1>
 <div class="card">
 <div class="card-header" style="display: flex; justify-content: space-between; align-items: center;">
-<h2 class="card-title">Weekly Schedule (2025-2026, First Semester)</h2>
+<h2 class="card-title">Weekly Schedule (2025-2026, First Trime)</h2>
 <div style="display: flex; gap: 15px; align-items: center;">
 <!-- Subject Colors - Left side -->
 <div style="display: flex; align-items: center; gap: 8px;">
