--- a/index.html
+++ b/index.html
@@ -7886,12 +7886,12 @@ Digital credentials are secure, verifiable electronic documents that certify a s
 <span class="info-value">October 13, 2003</span>
 </div>
 <div class="info-row">
-<span class="info-label">SEX</span>
-<span class="info-value">MALE</span>
+<span class="info-label">GENDER</span>
+<span class="info-value">Male</span>
 </div>
 <div class="info-row">
 <span class="info-label">CIVIL STATUS</span>
-<span class="info-value">SINGLE</span>
+<span class="info-value">Single</span>
 </div>
 <div class="info-row">
 <span class="info-label">OFFICIAL EMAIL</span>
@@ -8604,7 +8604,7 @@ Confirm Selection
 <h1 class="page-title">Class Schedule</h1>
 <div class="card">
 <div class="card-header" style="display: flex; justify-content: space-between; align-items: center;">
-<h2 class="card-title">Weekly Schedule (2025-2026, First Trime)</h2>
+<h2 class="card-title">Weekly Schedule (2025-2026, 1st Trime)</h2>
 <div style="display: flex; gap: 15px; align-items: center;">
 <!-- Subject Colors - Left side -->
 <div style="display: flex; align-items: center; gap: 8px;">
