Update labels for course code and title

--- a/index.html
+++ b/index.html
@@ -8603,7 +8603,7 @@ Digital credentials are secure, verifiable electronic documents that certify a s
 <div class="course-info-row">
 
 <div class="course-field">
-<label class="field-label"><i class="fas fa-book"></i> Title</label>
+<label class="field-label"><i class="fas fa-book"></i>Course Code</label>
 <span class="field-value"><input type="checkbox" style="transform: scale(1.2); accent-color: #667eea;"> &nbsp;SDF04</span>
 <span class="field-value"><input type="checkbox" style="transform: scale(1.2); accent-color: #667eea;"> &nbsp;SDF04</span>
 <hr>
@@ -8616,7 +8616,7 @@ Digital credentials are secure, verifiable electronic documents that certify a s
 <span class="field-value"><input type="checkbox" style="transform: scale(1.2); accent-color: #667eea;"> &nbsp;PE1</span>
 </div>
 <div class="course-field">
-<label class="field-label"><i class="fas fa-book"></i> Title</label>
+<label class="field-label"><i class="fas fa-book"></i> Course Title</label>
 <span class="field-value">Database Management</span>
 <span class="field-value">Database Management</span>
 <hr>
